--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
 				<table>
 					<tr>
 						<td>
+							<label><b>League:</b></label>
+						</td>
+						<td>
+							<input id="league" type="text" required>
+						</td>
+					</tr>
+					<tr>
+						<td>
 							<label><b>Ranking Policy:</b></label>
 						</td>
 						<td>
@@ -143,7 +151,31 @@
 					</tr>
 				</table>
 				<br>
-				<input id="league_policy_btn" type="submit" value="Update Policy" onclick="updatePolicy()">
+				<input id="league_policy_btn" type="submit" value="Update League Policy" onclick="updatePolicy()">
+		</div>
+		
+		<div id="manage_game_title" style="visibility: hidden;">
+				<h1> Choose Your Action: </h1>
+		</div>
+		
+		<div id="manage_game" style="visibility: hidden;">
+			<table>
+				<tr>
+					<td button class="action" onclick="createGameEvent()">
+						<h2>Add Game Event</h2>
+					</td>
+				</tr>
+				<tr>
+					<td button class="action" onclick="editGameEvent()">
+						<h2>Edit Game Event</h2>
+					</td>
+				</tr>
+				<tr>
+					<td button class="action" onclick="sendNotification()">
+						<h2>Send Notifications</h2>
+					</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 	
