--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			<table>
 				<tr>
 					<td button class="action" onclick="createGameEvent()">
-						<h2>Add Game Event</h2>
+						<h2>Create Game Event</h2>
 					</td>
 				</tr>
 				<tr>
