--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 		</div>
 		
 		<div id="new_team" style="visibility: hidden;">
-		
 				<table>
 					<tr>
 						<td>
@@ -113,9 +112,13 @@
 							<input id="team_stadium" type="text" required>
 						</td>
 					</tr>
+					
 				</table>
 				<br>
 				<input id="new_team_btn" type="submit" value="Create Team" onclick="teamCreated()">
+				<br>
+				<br>
+				<input id="back_to_menu_btn" type="submit" value="Back To Main Menu" onclick="backToMenu()">
 		</div>
 		
 		<div id="league_policy_title" style="visibility: hidden;">
@@ -123,7 +126,6 @@
 		</div>
 		
 		<div id="league_policy" style="visibility: hidden;">
-		
 				<table>
 					<tr>
 						<td>
@@ -152,6 +154,9 @@
 				</table>
 				<br>
 				<input id="league_policy_btn" type="submit" value="Update League Policy" onclick="updatePolicy()">
+				<br>
+				<br>
+				<input id="back_to_menu_btn" type="submit" value="Back To Main Menu" onclick="backToMenu()">
 		</div>
 		
 		<div id="manage_game_title" style="visibility: hidden;">
@@ -171,11 +176,18 @@
 					</td>
 				</tr>
 				<tr>
+					<td button class="action" onclick="editGameEvent()">
+						<h2>Write Game Report</h2>
+					</td>
+				</tr>
+				<tr>
 					<td button class="action" onclick="sendNotification()">
 						<h2>Send Notifications</h2>
 					</td>
 				</tr>
 			</table>
+			<br>
+			<input id="back_to_menu_btn" type="submit" value="Back To Main Menu" onclick="backToMenu()">
 		</div>
 	</div>
 	
