--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</tr>
 				<tr>
 					<td button class="action" onclick="manageGame()">
-						<h2>Manage Ongoing Game</h2>
+						<h2>Manage Game</h2>
 					</td>
 				</tr>
 				<tr>
@@ -126,6 +126,7 @@
 		</div>
 		
 		<div id="league_policy" style="visibility: hidden;">
+				<br>
 				<table>
 					<tr>
 						<td>
@@ -168,11 +169,6 @@
 				<tr>
 					<td button class="action" onclick="createGameEvent()">
 						<h2>Create Game Event</h2>
-					</td>
-				</tr>
-				<tr>
-					<td button class="action" onclick="editGameEvent()">
-						<h2>Edit Game Event</h2>
 					</td>
 				</tr>
 				<tr>
